--- a/package.json
+++ b/package.json
@@ -4,24 +4,20 @@
   "description": "Rosa Durante personal website.",
   "author": "rosa-durante",
   "engines": {
-    "node": "0.10.x"
+    "node": ">=18.0.x"
   },
   "repository": {
     "type": "git",
     "url": "http://github.com/rosadurante/rosadurante.git"
   },
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-cli": "^0.1.13",
-    "grunt-contrib-connect": "~0.5.0",
-    "grunt-open": "~0.2.2",
-    "grunt-contrib-less": "~0.7.0"
+    "grunt": "^1.6.1",
+    "grunt-cli": "^1.4.3",
+    "grunt-contrib-connect": "^4.0.0",
+    "grunt-contrib-less": "^3.0.0",
+    "grunt-open": "~0.2.2"
   },
   "dependencies": {
-    "grunt": "~0.4.1",
-    "grunt-cli": "^0.1.13",
-    "grunt-contrib-connect": "~0.5.0",
-    "grunt-contrib-less": "~0.7.0",
     "grunt-open": "~0.2.2"
   }
 }
