--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
   "devDependencies": {
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.11.8",
-    "@tailwindcss/postcss": "4.0.6",
     "@tailwindcss/cli": "^4.0.12",
+    "@tailwindcss/postcss": "4.0.6",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "autoprefixer": "^10.4.21",
@@ -32,6 +32,7 @@
     "concurrently": "^9.1.2",
     "esbuild": "^0.25.1",
     "live-server": "^1.2.2",
+    "lucide-react": "^0.479.0",
     "postcss": "^8.5.3",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.12",
