--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "live-server": "^1.2.2",
     "lucide-react": "^0.479.0",
     "postcss": "^8.5.3",
+    "react-markdown": "^10.1.0",
+    "react-router": "^7.3.0",
+    "react-router-dom": "^7.3.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.12",
     "typescript": "^5.8.2"
